Fix mobile spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,7 +6,7 @@ body {
   background: $backgroundColor;
   color: $bodyColor;
   font-family: $bodyFont;
-  margin: 4em 0 0 0;
+  margin: 6em 0 4em 0;
 }
 
 .global_nav {
@@ -42,11 +42,11 @@ body {
   list-style-type: none;
   display: flex;
   margin: 0;
-  padding: 0;
+  padding: 0 0.5em;
 }
 
 .global_nav__item {
-  padding: 0.5em 1em;
+  padding: 0.5em 0.5em;
 }
 
 .global_nav__item__link {
